fix: fixes the gap between user_info and background fill

--- a/chillax.css
+++ b/chillax.css
@@ -1589,7 +1589,7 @@ html.theme-light .withTagAsButton_b2ca13:hover {
 .layer__960e4 .accountProfileCard__1fed1 .userInfo__1fed1 .container__8061a {
     justify-content: center;
     width: 100%;
-    margin-bottom: 57px;
+    /*margin-bottom: 57px;*/
 }
 
 .layer__960e4 .accountProfileCard__1fed1 .userInfo__1fed1 .button__201d5 {
